# predecessor_telegram_bot

./: .gitignore  LICENSE  README.md  bot.py  main.py  players.py  ps_analitic_tools.py  ps_data_manager.py  ps_parser.py  pyproject.toml  requirements.txt  requirements_2.txt  users_manager.py
tests/: conftest.py
tests/unit/: test_analitic_tools.py
utils/: ps_analitic_tools.py  ps_data_manager.py  ps_parser.py  users_manager.py
